--- a/03_ocp_install/ansible/vars/vars.yaml
+++ b/03_ocp_install/ansible/vars/vars.yaml
@@ -1,43 +1,43 @@
 ##### Outscale vars 
 outscale_ak:                                            #Outscale Access Key
 outscale_sk:                                   		#Outscale Secret Key
-outscale_region: 	                                #Outscale Region
-outscale_subregion:                                     #Outsacle AZ
-outscale_api_endpoint: 				        #Outscale API Endpoint
-outscale_sshkey_name:   				#SSH key used by your instances
+outscale_region: 	                                #Outscale Region (example: eu-west-2)
+outscale_subregion:                                     #Outsacle AZ (example: eu-west-2a)
+outscale_api_endpoint: 				        #Outscale API Endpoint (https://docs.outscale.com/fr/userguide/R%C3%A9f%C3%A9rence-des-R%C3%A9gions-endpoints-et-Availability-Zones.html)
+outscale_sshkey_name:   				#SSH key used by your instances (example: ocpkey)
 sg_id:
 
 ##### Global vars
-domain_name:						#Your DNS domain
-coreos_omi_id:						#OMI ID used for OCP nodes
-infra_omi_id:   					#OMI ID used for INFRA VM
+domain_name:						#Your DNS domain (example: outscale.local)
+coreos_omi_id:						#OMI ID used for OCP nodes (example: ami-xxxxx)
+infra_omi_id:   					#OMI ID used for ocpinfra01 (example: Fedora ami-f929abe8)
 
 ##### infravm vars
-subnet_id_infravm:                                      #Subnet ID where is deployed Infra VM 
-infravm_ip:					        #Infravm IP you chosen
-infravm_flavor: 					#Infravm flavor
-infravm_remote_user:					#SSH user used by Ansible to connect to the infravm server
-haproxy_stat_pwd:					#HAProxy stats page password
+subnet_id_infravm:                                      #Subnet ID where is deployed ocpinfra01 (example: subnet-xxx)
+infravm_ip:					        #Infravm IP you chosen (example: 192.168.2.200)
+infravm_flavor: 					#Infravm flavor (example: tinav4.c1r2p2)
+infravm_remote_user:					#SSH user used by Ansible to connect to the ocpinfra01 server (example: fedora)
+haproxy_stat_pwd:					#HAProxy stats page password (example: password)
 
 ##### OCP clusters vars
-ocp_cluster_name:					#OCP Cluster name without special characters
-ocp_cluster_cidr:       				#OCP Cluster cidr
-ocp_service_cidr:					#OCP Cluster service cidr
-ocp_hostprefix:						#OCP Cluster host prefix
-ocp_networktype:					#OCP Cluster SDN Type
-ocp_pull_secret:                                        #OCP pull secret get on console.redhat.com with your Red hat account
-ocp_pub_sshkey:                                         #You SSH public key to access to OCP nodes
-ocp_private_sshkey_path:        			#Your SSH private key to place in your .ssh user directory
+ocp_cluster_name:					#OCP Cluster name without special characters (example: ocp01)
+ocp_cluster_cidr:       				#OCP Cluster cidr (default: 10.128.0.0/14)
+ocp_service_cidr:					#OCP Cluster service cidr (default: 172.30.0.0/16)
+ocp_hostprefix:						#OCP Cluster host prefix (default: 23)
+ocp_networktype:					#OCP Cluster SDN Type (default: OpenShiftSDN)
+ocp_pull_secret: ''                                        #OCP pull secret get on console.redhat.com with your Red hat account
+ocp_pub_sshkey: ''                                         #You SSH public key to access to OCP nodes
+ocp_private_sshkey_path: ''        			#Your SSH private key to place in your .ssh user directory
 
 ## Master conf
-subnet_id_master:                                       #Subnet ID where is deployed OCP masters
+subnet_id_master:                                       #Subnet ID where is deployed OCP masters (example: subnet-xxx)
 master_count: 3						#Number of OCP master nodes (3 is the minimum for ETCD)
-master_flavor:                                          #Flavor used for OCP masters
+master_flavor:                                          #Flavor used for OCP masters (example: tinav4.c4r8p2)
 
 ## Worker conf
-subnet_id_worker:                                       #Subnet ID where is deployed OCP workers
+subnet_id_worker:                                       #Subnet ID where is deployed OCP workers (example: subnet-xxx)
 worker_count: 3						#Number of OCP worker nodes
-worker_flavor:                                          #Flavor used for OCP workers
+worker_flavor:                                          #Flavor used for OCP workers (example: tinav4.c4r8p2)
 
 ##### OCP GitOps
 enable_gitops: false				        #Install GitOps on your cluster : true or false
