--- a/03_ocp_install/ansible/vars/vars.yaml
+++ b/03_ocp_install/ansible/vars/vars.yaml
@@ -3,7 +3,7 @@ outscale_ak:                                            #Outscale Access Key
 outscale_sk:                                   		#Outscale Secret Key
 outscale_region: 	                                #Outscale Region (example: eu-west-2)
 outscale_subregion:                                     #Outsacle AZ (example: eu-west-2a)
-outscale_api_endpoint: 				        #Outscale API Endpoint (https://docs.outscale.com/fr/userguide/R%C3%A9f%C3%A9rence-des-R%C3%A9gions-endpoints-et-Availability-Zones.html)
+outscale_api_endpoint: 				        #Outscale API Endpoint https://docs.outscale.com/fr/userguide/R%C3%A9f%C3%A9rence-des-R%C3%A9gions-endpoints-et-Availability-Zones.html (exemple: api.eu-west-2.outscale.com for eu-west-2)
 outscale_sshkey_name:   				#SSH key used by your instances (example: ocpkey)
 sg_id:
 
@@ -25,7 +25,7 @@ ocp_cluster_cidr:       				#OCP Cluster cidr (default: 10.128.0.0/14)
 ocp_service_cidr:					#OCP Cluster service cidr (default: 172.30.0.0/16)
 ocp_hostprefix:						#OCP Cluster host prefix (default: 23)
 ocp_networktype:					#OCP Cluster SDN Type (default: OpenShiftSDN)
-ocp_pull_secret: ''                                        #OCP pull secret get on console.redhat.com with your Red hat account
+ocp_pull_secret: ''                                       #OCP pull secret get on console.redhat.com with your Red hat account
 ocp_pub_sshkey: ''                                         #You SSH public key to access to OCP nodes
 ocp_private_sshkey_path: ''        			#Your SSH private key to place in your .ssh user directory
 
